# Motioner

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build_err.txt  build_out.txt  code.motioner  errors.txt  output.txt  rust-toolchain.toml  serve-docs.cmd  serve-docs.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: docs.yml  publish-docs.yml  release.yml  rust.yml
docs/: .gitignore  ARCHITECTURE.md  DSL.md  README.md  _files.json  app.js  book.toml  index.html  style.css
docs/components/: renderer.md
docs/elements/: animation.md  layers.md  shapes.md
docs/src/: SUMMARY.md  introduction.md
docs/templates/: README.md  category-template.md  contribution-template.md  function-template.md
examples/: inspect_ab.rs
src/: app_state.rs  autocomplete.rs  canvas.rs  code_panel.rs  composition.wgsl  dsl.rs  logo.rs  main.rs  project_settings.rs  renderer.rs  scene.rs  scene_graph.rs  timeline.rs  ui.rs  welcome_modal.rs
src/animations/: animations_manager.rs  easing.rs  mod.rs  move_animation.rs
src/canvas/: buffer_pool.rs  cache_management.rs  gpu.rs  position_cache.rs  preview_worker.rs  rasterizer.rs  spatial_hash.rs  text_rasterizer.rs  tile_cache.rs  ui.rs
src/code_panel/: gutter.rs  highlighter.rs  minimap.rs  mod.rs  utils.rs
src/dsl/: ast.rs  evaluator.rs  generator.rs  lexer.rs  mod.rs  mod.rs_FIXED  parser.rs  runtime.rs  utils.rs  validator.rs
src/events/: element_properties_changed_event.rs  mod.rs  time_changed_event.rs
(+83 files in other folders)
