[package]
name = "motioner_ui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]

[dependencies]
eframe = { version = "0.26", features = ["wgpu"] }
egui = "0.26"
egui-wgpu = "0.26"
image = "0.24"
sysinfo = "0.30"
tempfile = "3.6"
anyhow = "1.0"
rfd = "0.17.2"
winit = "0.29"
display-info = "0.5"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["wgpu"]
wgpu = []
