[package]
name = "motioner_ui"
version = "0.1.0"
edition = "2021"
authors = ["jvchiappini <jvchiappini@gmail.com>"]

[dependencies]
eframe = { version = "0.26", features = ["wgpu"] }
egui = "0.26"
egui-wgpu = "0.26"
image = "0.24"
sysinfo = "0.30"
tempfile = "3.6"
anyhow = "1.0"
rfd = "0.17.2"
winit = "0.29"
display-info = "0.5"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.8"
splines = "5.0.0"
ab_glyph = "0.2"
inventory = "0.1"
once_cell = "1.17"
owned_ttf_parser = "0.20"

# dependencies needed for rasterizing SVG assets at runtime
usvg = "0.36"
resvg = "0.36"
tiny-skia = "0.10"

[features]
default = ["wgpu"]
wgpu = []
